--- a/_quarto.yml
+++ b/_quarto.yml
@@ -59,6 +59,9 @@ format:
   html:
     theme: cosmo
     number-depth: 2
+    include-in-header:
+      text: |
+        <script defer src="https://umami.martinez.fyi/script.js" data-website-id="bc587120-3bd3-4c2d-b463-5eb64dd4e330"></script>
     code-tools:
       source: true   
 
@@ -72,7 +75,10 @@ format:
       mastodon: true
       
   pdf:
-    documentclass: scrreprt      
+    documentclass: scrreprt     
+
+resources:
+  - CNAME    
 execute:
   freeze: auto  #
 
